# picosystem-rust-boilerplate

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  Makefile  README.md  build.rs  convert_png.py  main.cpp
.cargo/: config.toml
include/: binding.h
src/: binding.cpp  game.rs  lib.rs  util.rs
